# zigzag

./: .gitignore  example_zigzag.py  pyproject.toml  requirements.txt  setup.py
zig_zag/: __init__.py
zigzag/: core.pyx
