[tool.poetry]
name = "zig-zag"
version = "0.1.0"
description = "Zig Zag indicator"
authors = ["pakchu <gus4734@gmail.com>"]
readme = "README.md"
packages = [{include = "zig_zag"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
numpy = "^1.26.0"
pandas-ta = "^0.3.14b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
