[tool.poetry]
name = "zig-zag"
version = "0.1.0"
description = "Zig Zag indicator"
authors = ["pakchu <gus4734@gmail.com>"]
readme = "README.md"
packages = [{include = "zig_zag"}]

[tool.poetry.dependencies]
python = "^3.11"
cython = "^3.0.11"
numpy = "^2.2.0"
pandas = "^2.2.3"
pandas-ta = "^0.3.14b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
